Fixed icons for menuitems

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <nav class="main__nav">
                 <ul class="nav__ul">
                     <li>CORE</li>
-                    <li><i class="fa-tachometer"></i>Dashboard</li>
+                    <li><i class="fa fa-tachometer"></i>Dashboard</li>
                     <li>INTERFACE</li>
-                    <li><i class="fa-windows"></i>Layouts</li>
-                    <li><i class="fa-bookmark"></i>Pages</li>
+                    <li><i class="fa fa-windows"></i>Layouts</li>
+                    <li><i class="fa fa-bookmark"></i>Pages</li>
                     <li>ADDONS</li>
-                    <li><i class="fa-area-chart"></i>Charts</li>
-                    <li><i class="fa-table"></i>Tables</li>
+                    <li><i class="fa fa-area-chart"></i>Charts</li>
+                    <li><i class="fa fa-table"></i>Tables</li>
                 </ul>
             </nav>
         </aside>
