Updated style for page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-container">
 
-        <aside>
+        <aside class="left-sidebar">
             <nav class="main__nav">
                 <ul class="nav__ul">
                     <li>CORE</li>
