--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <aside class="left-sidebar">
             <nav class="main__nav">
                 <ul class="nav__ul">
-                    <li>CORE</li>
+                    <li class="nav__header">Core</li>
                     <li><i class="fa fa-tachometer"></i>Dashboard</li>
-                    <li>INTERFACE</li>
+                    <li class="nav__header">Interface</li>
                     <li><i class="fa fa-windows"></i>Layouts</li>
                     <li><i class="fa fa-bookmark"></i>Pages</li>
-                    <li>ADDONS</li>
+                    <li class="nav__header">Addons</li>
                     <li><i class="fa fa-area-chart"></i>Charts</li>
                     <li><i class="fa fa-table"></i>Tables</li>
                 </ul>
@@ -45,19 +45,27 @@
             <div class="main__cards">
                 <div class="main__card main__card--blue">
                     <div class="card__top">Primary Card</div>
-                    <div class="card__bottom">View Details</div>
+                    <div class="card__bottom">View Details
+                        <span>></span>
+                    </div>
                 </div>
                 <div class="main__card main__card--yellow">
                     <div class="card__top">Warning Card</div>
-                    <div class="card__bottom">View Details</div>
+                    <div class="card__bottom">View Details
+                        <span>></span>
+                    </div>
                 </div>
                 <div class="main__card main__card--green">
                     <div class="card__top">Success Card</div>
-                    <div class="card__bottom">View Details</div>
+                    <div class="card__bottom">View Details
+                        <span>></span>
+                    </div>
                 </div>
                 <div class="main__card main__card--red">
                     <div class="card__top">Danger Card</div>
-                    <div class="card__bottom">View Details</div>
+                    <div class="card__bottom">View Details
+                        <span>></span>
+                    </div>
                 </div>
             </div>
         </section>
